--- a/scss/sections/young_favorites.scss
+++ b/scss/sections/young_favorites.scss
@@ -49,6 +49,10 @@
             margin-bottom: 50px;
             font-size: 40px;
         }
+        @include tablet-small {
+            margin-bottom: 40px;
+            font-size: 30px;
+        }
     }
     
     &__items {
@@ -60,12 +64,19 @@
         @include desktop {
             justify-content: space-between;
         }
+        @include tablet-small {
+            gap: 20px;
+        }
     }
     
     &__item_box {
         flex: 0 1 calc((100% - 47px)/2);
         display: flex;
         flex-direction: column;
+        
+        @include tablet-small {
+            flex: 0 1 calc((100% - 20px)/2);
+        }
     }
     
     &__item_image {
