--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -51,6 +51,9 @@ body {
     @include desktop {
         font-size: 20px;
     }
+    @include mobile {
+        font-size: 16px;
+    }
 }
 
 .item_arrow {
@@ -75,6 +78,9 @@ body {
     }
     @include tablet-small {
         font-size: 22px;
+    }
+    @include mobile {
+        font-size: 18px;
     }
 }
 
