--- a/scss/sections/advert.scss
+++ b/scss/sections/advert.scss
@@ -11,6 +11,9 @@
     @include tablet-small {
         margin-bottom: 40px;
     }
+    @include mobile {
+        margin-bottom: 20px;
+    }
 
     &__container {
         display: flex;
@@ -72,6 +75,11 @@
             top: 6%;
             left: 5%;
         }
+        @include mobile {
+            max-width: 180px;
+            top: 10%;
+            left: 5%;
+        }
     }
     
     &__title {
@@ -97,6 +105,10 @@
         @include tablet-small {
             font-size: 50px;
         }
+        @include mobile {
+            font-size: 34px;
+            margin-bottom: 10px;
+        }
     }
 
     &__desc {
@@ -120,6 +132,10 @@
             @include tablet-small {
                 margin-bottom: 30px;
             }
+            @include mobile {
+                margin-bottom: 10px;
+                font-size: 16px;
+            }
         }
         
         #advert__date {
@@ -134,6 +150,9 @@
             }
             @include tablet {
                 font-size: 26px;
+            }
+            @include mobile {
+                font-size: 18px;
             }
         }
         
@@ -154,6 +173,10 @@
             }
             @include tablet-small {
                 margin-bottom: 30px;
+            }
+            @include mobile {
+                margin-bottom: 10px;
+                font-size: 16px;
             }
         }
     }
@@ -178,6 +201,11 @@
             font-size: 22px;
             font-weight: 500;
             padding: 14px 28px;
+        }
+        @include mobile {
+            font-size: 16px;
+            font-weight: 400;
+            padding: 8px 18px;
         }
     }
     
