--- a/scss/sections/join.scss
+++ b/scss/sections/join.scss
@@ -36,6 +36,9 @@
         @include tablet-small {
             font-size: 32px;
         }
+        @include mobile {
+            font-size: 26px;
+        }
     }
     
     &__desc {
@@ -53,6 +56,9 @@
         @include tablet-small {
             font-size: 20px;
         }
+        @include mobile {
+            font-size: 16px;
+        }
     }
     &__email {
         max-width: 574px;
@@ -67,6 +73,11 @@
         @include tablet {
             max-width: 90%;
             padding: 6px;
+        }
+        @include mobile {
+            max-width: initial;
+            padding-top: 10px;
+            padding-bottom: 10px;
         }
     }
     
@@ -89,6 +100,9 @@
             font-size: 20px;
             line-height: 116%;
         }
+        @include mobile {
+            font-size: 14px;
+        }
     }
     
     &__button {
@@ -108,6 +122,20 @@
         @include tablet {
             font-size: 20px;
             padding: 12px 32px;
+        }
+        @include mobile {
+            display: none;
+        }
+    }
+
+    &__icon_send {
+        display: none;
+        justify-content: center;
+        align-items: center;
+        padding-inline: 3px;
+
+        @include mobile {
+            display: flex;
         }
     }
 }
