--- a/styles.css
+++ b/styles.css
@@ -81,6 +81,9 @@ body {
   @media (max-width: 1536px) {
     .explore_now {
       font-size: 20px; } }
+  @media (max-width: 576px) {
+    .explore_now {
+      font-size: 16px; } }
 
 .item_arrow {
   -ms-flex-item-align: stretch;
@@ -108,6 +111,9 @@ body {
   @media (max-width: 768px) {
     .item_title {
       font-size: 22px; } }
+  @media (max-width: 576px) {
+    .item_title {
+      font-size: 18px; } }
 
 .heartbeat {
   -webkit-animation: heartbeat 3s ease-in-out infinite both;
@@ -192,6 +198,9 @@ body {
   @media (max-width: 992px) {
     .header {
       margin: 30px; } }
+  @media (max-width: 576px) {
+    .header {
+      margin: 20px 10px; } }
   .header__logo {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -208,6 +217,9 @@ body {
     .header__logo:hover {
       -webkit-transform: scale(1.08);
               transform: scale(1.08); }
+    @media (max-width: 576px) {
+      .header__logo .logo_title {
+        display: none; } }
   .header__logo_title a {
     color: var(--c-black); }
   .header__nav {
@@ -220,7 +232,8 @@ body {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    gap: 54px; }
+    gap: 54px;
+    position: relative; }
     @media (max-width: 1536px) {
       .header__nav {
         gap: 30px; } }
@@ -249,7 +262,9 @@ body {
         gap: 20px; } }
     @media (max-width: 992px) {
       .header__ul {
-        display: none; } }
+        display: none;
+        position: absolute;
+        left: 0; } }
   .header__a {
     font-family: var(--main-font);
     font-weight: 500;
@@ -308,6 +323,11 @@ body {
       .header__button {
         font-size: 22px;
         padding: 14px 18px; } }
+    @media (max-width: 576px) {
+      .header__button {
+        font-size: 16px;
+        font-weight: 400;
+        padding: 10px 15px; } }
 
 .welcome {
   margin-bottom: 63px; }
@@ -322,6 +342,9 @@ body {
     @media (max-width: 992px) {
       .welcome__container {
         padding-inline: 30px; } }
+    @media (max-width: 576px) {
+      .welcome__container {
+        padding-inline: 10px; } }
   .welcome__banner {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -349,6 +372,9 @@ body {
     @media (max-width: 768px) {
       .welcome__banner {
         padding: 30px 30px 0px; } }
+    @media (max-width: 576px) {
+      .welcome__banner {
+        padding: 20px 0 0; } }
   @media (max-width: 1200px) {
     .welcome__info {
       text-align: center; } }
@@ -368,6 +394,9 @@ body {
       @media (max-width: 768px) {
         .welcome__title_box .white_rect {
           max-width: 280px; } }
+      @media (max-width: 576px) {
+        .welcome__title_box .white_rect {
+          max-width: 180px; } }
     .welcome__title_box .yellow_rect {
       position: absolute;
       max-width: 450px;
@@ -384,6 +413,10 @@ body {
       @media (max-width: 768px) {
         .welcome__title_box .yellow_rect {
           max-width: 280px; } }
+      @media (max-width: 576px) {
+        .welcome__title_box .yellow_rect {
+          max-width: 180px;
+          right: 5%; } }
   .welcome__title {
     max-width: 474px;
     font-family: var(--main-font);
@@ -408,6 +441,10 @@ body {
     @media (max-width: 768px) {
       .welcome__title {
         font-size: 50px; } }
+    @media (max-width: 576px) {
+      .welcome__title {
+        font-size: 32px;
+        margin-bottom: 10px; } }
   .welcome__desc {
     font-family: var(--main-font);
     font-weight: 400;
@@ -424,6 +461,10 @@ body {
     @media (max-width: 768px) {
       .welcome__desc {
         margin-bottom: 22px; } }
+    @media (max-width: 576px) {
+      .welcome__desc {
+        font-size: 16px;
+        margin-bottom: 10px; } }
   .welcome__button_box {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -478,6 +519,10 @@ body {
       .welcome__button {
         font-size: 20px;
         padding: 12px 28px; } }
+    @media (max-width: 576px) {
+      .welcome__button {
+        font-size: 16px;
+        padding: 8px 18px; } }
   .welcome__image {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -505,12 +550,18 @@ body {
     @media (max-width: 768px) {
       .welcome__image {
         max-width: 70%; } }
+    @media (max-width: 576px) {
+      .welcome__image {
+        max-width: 80%; } }
   .welcome__image .star {
     position: absolute;
     max-width: 58px; }
     @media (max-width: 768px) {
       .welcome__image .star {
         max-width: 44px; } }
+    @media (max-width: 576px) {
+      .welcome__image .star {
+        max-width: 30px; } }
   .welcome__image .upleft_star {
     top: -1%;
     left: -3%; }
@@ -530,6 +581,9 @@ body {
   @media (max-width: 768px) {
     .brands {
       margin-bottom: 30px; } }
+  @media (max-width: 576px) {
+    .brands {
+      margin-bottom: 20px; } }
   .brands__container {
     padding: 50px 171px; }
     @media (max-width: 1536px) {
@@ -538,6 +592,9 @@ body {
     @media (max-width: 992px) {
       .brands__container {
         padding-inline: 30px; } }
+    @media (max-width: 576px) {
+      .brands__container {
+        padding-inline: 20px; } }
   .brands__list {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -555,9 +612,21 @@ body {
     @media (max-width: 992px) {
       .brands__list {
         gap: 30px; } }
+    @media (max-width: 576px) {
+      .brands__list {
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+        row-gap: initial;
+        -webkit-column-gap: 30px;
+                column-gap: 30px; } }
   .brands__item:hover {
     -webkit-transform: scale(1.2);
             transform: scale(1.2); }
+  @media (max-width: 576px) {
+    .brands__item {
+      -webkit-box-flex: calc((100% - 30px * 2) / 3);
+          -ms-flex: calc((100% - 30px * 2) / 3);
+              flex: calc((100% - 30px * 2) / 3); } }
 
 .new-arriv {
   margin-bottom: 190px; }
@@ -601,6 +670,10 @@ body {
       .new-arriv__title {
         margin-bottom: 40px;
         font-size: 30px; } }
+    @media (max-width: 576px) {
+      .new-arriv__title {
+        margin-bottom: 20px;
+        font-size: 20px; } }
   .new-arriv__title .yellow_wave2 {
     position: absolute;
     max-width: 186px;
@@ -647,6 +720,11 @@ body {
         -webkit-box-flex: 0;
             -ms-flex: 0 1 calc((100% - 30px * 2)/3);
                 flex: 0 1 calc((100% - 30px * 2)/3); } }
+    @media (max-width: 576px) {
+      .new-arriv__item_box {
+        -webkit-box-flex: 0;
+            -ms-flex: 0 1 100%;
+                flex: 0 1 100%; } }
   .new-arriv__item_image {
     margin-bottom: 28px;
     border-radius: 20px;
@@ -693,6 +771,9 @@ body {
   @media (max-width: 768px) {
     .advert {
       margin-bottom: 40px; } }
+  @media (max-width: 576px) {
+    .advert {
+      margin-bottom: 20px; } }
   .advert__container {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -758,6 +839,11 @@ body {
         max-width: 280px;
         top: 6%;
         left: 5%; } }
+    @media (max-width: 576px) {
+      .advert__info .white_rect {
+        max-width: 180px;
+        top: 10%;
+        left: 5%; } }
   .advert__title {
     max-width: 616px;
     font-weight: 900;
@@ -780,6 +866,10 @@ body {
     @media (max-width: 768px) {
       .advert__title {
         font-size: 50px; } }
+    @media (max-width: 576px) {
+      .advert__title {
+        font-size: 34px;
+        margin-bottom: 10px; } }
   .advert__desc {
     max-width: 666px; }
     .advert__desc #advert__offer {
@@ -800,6 +890,10 @@ body {
       @media (max-width: 768px) {
         .advert__desc #advert__offer {
           margin-bottom: 30px; } }
+      @media (max-width: 576px) {
+        .advert__desc #advert__offer {
+          margin-bottom: 10px;
+          font-size: 16px; } }
     .advert__desc #advert__date {
       font-weight: 700;
       font-size: 36px;
@@ -812,6 +906,9 @@ body {
       @media (max-width: 992px) {
         .advert__desc #advert__date {
           font-size: 26px; } }
+      @media (max-width: 576px) {
+        .advert__desc #advert__date {
+          font-size: 18px; } }
     .advert__desc #advert__cond {
       font-weight: 400;
       font-size: 36px;
@@ -829,6 +926,10 @@ body {
       @media (max-width: 768px) {
         .advert__desc #advert__cond {
           margin-bottom: 30px; } }
+      @media (max-width: 576px) {
+        .advert__desc #advert__cond {
+          margin-bottom: 10px;
+          font-size: 16px; } }
   .advert__button {
     font-weight: 600;
     font-size: 27px;
@@ -849,6 +950,11 @@ body {
         font-size: 22px;
         font-weight: 500;
         padding: 14px 28px; } }
+    @media (max-width: 576px) {
+      .advert__button {
+        font-size: 16px;
+        font-weight: 400;
+        padding: 8px 18px; } }
   .advert__image .star {
     position: absolute;
     max-width: 76px; }
@@ -933,6 +1039,10 @@ body {
       .young-fav__title {
         margin-bottom: 40px;
         font-size: 30px; } }
+    @media (max-width: 576px) {
+      .young-fav__title {
+        margin-bottom: 20px;
+        font-size: 24px; } }
   .young-fav__items {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -967,6 +1077,11 @@ body {
         -webkit-box-flex: 0;
             -ms-flex: 0 1 calc((100% - 20px)/2);
                 flex: 0 1 calc((100% - 20px)/2); } }
+    @media (max-width: 576px) {
+      .young-fav__item_box {
+        -webkit-box-flex: 0;
+            -ms-flex: 0 1 100%;
+                flex: 0 1 100%; } }
   .young-fav__item_image {
     border-radius: 20px;
     margin-bottom: 28px;
@@ -1031,6 +1146,14 @@ body {
     @media (max-width: 992px) {
       .app__container {
         padding-inline: 50px; } }
+    @media (max-width: 576px) {
+      .app__container {
+        padding-inline: 20px;
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        text-align: center; } }
   .app__info {
     font-family: var(--main-font);
     max-width: 520px; }
@@ -1069,6 +1192,9 @@ body {
     @media (max-width: 768px) {
       .app__desc {
         margin-bottom: 28px; } }
+    @media (max-width: 576px) {
+      .app__desc {
+        font-size: 16px; } }
   .app__download {
     max-width: 420px;
     display: -webkit-box;
@@ -1077,6 +1203,11 @@ body {
     -webkit-box-pack: justify;
         -ms-flex-pack: justify;
             justify-content: space-between; }
+    @media (max-width: 576px) {
+      .app__download {
+        -webkit-box-pack: space-evenly;
+            -ms-flex-pack: space-evenly;
+                justify-content: space-evenly; } }
     @media (max-width: 992px) {
       .app__download a {
         max-width: 180px; } }
@@ -1091,6 +1222,9 @@ body {
               transform: scale(1.05); }
   .app__image {
     position: relative; }
+    @media (max-width: 576px) {
+      .app__image {
+        max-width: 60%; } }
     .app__image .mobile_app {
       max-width: 500px; }
     .app__image .rings {
@@ -1162,6 +1296,9 @@ body {
     @media (max-width: 768px) {
       .join__title {
         font-size: 32px; } }
+    @media (max-width: 576px) {
+      .join__title {
+        font-size: 26px; } }
   .join__desc {
     font-weight: 400;
     font-size: 32px;
@@ -1176,6 +1313,9 @@ body {
     @media (max-width: 768px) {
       .join__desc {
         font-size: 20px; } }
+    @media (max-width: 576px) {
+      .join__desc {
+        font-size: 16px; } }
   .join__email {
     max-width: 574px;
     margin-inline: auto;
@@ -1193,6 +1333,11 @@ body {
       .join__email {
         max-width: 90%;
         padding: 6px; } }
+    @media (max-width: 576px) {
+      .join__email {
+        max-width: initial;
+        padding-top: 10px;
+        padding-bottom: 10px; } }
   .join__email input {
     border: none;
     outline: none;
@@ -1210,6 +1355,9 @@ body {
       .join__email input[placeholder] {
         font-size: 20px;
         line-height: 116%; } }
+    @media (max-width: 576px) {
+      .join__email input[placeholder] {
+        font-size: 14px; } }
   .join__button {
     font-weight: 500;
     font-size: 33px;
@@ -1227,6 +1375,23 @@ body {
       .join__button {
         font-size: 20px;
         padding: 12px 32px; } }
+    @media (max-width: 576px) {
+      .join__button {
+        display: none; } }
+  .join__icon_send {
+    display: none;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+    padding-inline: 3px; }
+    @media (max-width: 576px) {
+      .join__icon_send {
+        display: -webkit-box;
+        display: -ms-flexbox;
+        display: flex; } }
 
 .footer {
   background: var(--c-black); }
@@ -1253,6 +1418,9 @@ body {
     @media (max-width: 992px) {
       .footer__container {
         padding: 40px 30px; } }
+    @media (max-width: 992px) {
+      .footer__container {
+        gap: 30px; } }
   .footer__info {
     max-width: 450px;
     display: -webkit-box;
@@ -1331,6 +1499,13 @@ body {
     @media (max-width: 768px) {
       .footer__nav {
         gap: 10px; } }
+    @media (max-width: 576px) {
+      .footer__nav {
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        gap: 20px; } }
     @media (max-width: 1536px) {
       .footer__nav_company, .footer__nav_guides, .footer__nav_legal {
         -webkit-box-flex: calc((100% - 40px * 2) / 3);
@@ -1366,6 +1541,9 @@ body {
     @media (max-width: 992px) {
       .footer__ul {
         gap: 20px; } }
+    @media (max-width: 576px) {
+      .footer__ul {
+        gap: 10px; } }
   .footer__li:not(.footer__nav_title) a:hover {
     color: var(--c-yellow-main); }
   .footer__a {
