added javasacript for burger menu

--- a/scss/_base.scss
+++ b/scss/_base.scss
@@ -15,6 +15,10 @@ body {
 	background: var(--c-white);
     color: var(--c-black);
     transition: var(--transition);
+
+    &.no-scroll {
+        overflow: hidden;
+    }
 }
 
 .btn {
