--- a/styles.css
+++ b/styles.css
@@ -51,6 +51,8 @@ body {
   color: var(--c-black);
   -webkit-transition: var(--transition);
   transition: var(--transition); }
+  body.no-scroll {
+    overflow: hidden; }
 
 .btn {
   display: inline-block;
@@ -197,7 +199,14 @@ body {
       gap: 10px; } }
   @media (max-width: 992px) {
     .header {
-      margin: 30px; } }
+      margin: 0;
+      padding: 30px;
+      position: fixed;
+      top: 0;
+      left: 0;
+      right: 0;
+      background: rgba(241, 217, 75, 0.6);
+      z-index: 3; } }
   @media (max-width: 576px) {
     .header {
       margin: 20px 10px; } }
@@ -262,9 +271,26 @@ body {
         gap: 20px; } }
     @media (max-width: 992px) {
       .header__ul {
-        display: none;
-        position: absolute;
-        left: 0; } }
+        -webkit-box-orient: vertical;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: column;
+                flex-direction: column;
+        gap: 40px;
+        position: fixed;
+        height: 50%;
+        left: 0;
+        right: 0;
+        top: 0;
+        background: rgba(7, 7, 7, 0.9);
+        z-index: 3;
+        -webkit-transform: translateY(-105%);
+                transform: translateY(-105%); } }
+    .header__ul.active {
+      -webkit-transform: translateY(0);
+              transform: translateY(0); }
+  .header__li:hover {
+    -webkit-transform: scale(1.09);
+            transform: scale(1.09); }
   .header__a {
     font-family: var(--main-font);
     font-weight: 500;
@@ -277,14 +303,17 @@ body {
       .header__a {
         font-size: 18px;
         font-weight: 600; } }
-  .header__li:hover {
-    -webkit-transform: scale(1.09);
-            transform: scale(1.09); }
+    @media (max-width: 992px) {
+      .header__a {
+        color: var(--c-white);
+        font-size: 24px;
+        font-weight: 400; } }
   .header__burger {
     display: none;
     width: 28px;
     height: 28px;
-    position: relative; }
+    position: relative;
+    cursor: pointer; }
     .header__burger span {
       display: block;
       position: absolute;
@@ -341,7 +370,8 @@ body {
         padding-inline: 50px; } }
     @media (max-width: 992px) {
       .welcome__container {
-        padding-inline: 30px; } }
+        padding-inline: 30px;
+        margin-top: 150px; } }
     @media (max-width: 576px) {
       .welcome__container {
         padding-inline: 10px; } }
