--- a/scss/sections/advert.scss
+++ b/scss/sections/advert.scss
@@ -1,6 +1,6 @@
 .advert {
     margin-bottom: 190px;
-    background: linear-gradient(360deg, #e0c340 0%, #dfc23e 3.93%, #e1c441 7.23%, #e3c743 10.23%, #e4c542 13.14%, #e6c744 16.22%, #e7c845 19.84%, #e5c643 24.38%, #e6c945 31%, #e3c743 37.19%, #e9ca48 43.33%, #edce49 50.36%, #f0d44c 56.57%, #f4d84f 62.71%, #f6da52 67.12%, #f7db53 73.77%, #f9dd55 79.08%, #f9df56 85.64%, #fae157 93.5%, #f9df56 100%);
+    background: linear-gradient(155deg, #fff47e 0%, #f9dd55 55%, #f0d34c 65%, #e0c340 80%);
     
     @include desktop {
         margin-bottom: 150px;
@@ -17,8 +17,11 @@
 
     &__container {
         display: flex;
-        justify-content: space-between;
         align-items: center;
+
+        @include tablet-small {
+            justify-content: center;
+        }
     }
     
     &__image {
@@ -40,6 +43,14 @@
     
     &__poster {
         object-fit: cover;
+    }
+
+    &__info_box {
+        background: linear-gradient(0deg, #e0c340 0%, #dfc23e 3.93%, #e1c441 7.23%, #e3c743 10.23%, #e4c542 13.14%, #e6c744 16.22%, #e7c845 19.84%, #e5c643 24.38%, #e6c945 31%, #e3c743 37.19%, #e9ca48 43.33%, #edce49 50.36%, #f0d44c 56.57%, #f4d84f 62.71%, #f6da52 67.12%, #f7db53 73.77%, #f9dd55 79.08%, #f9df56 85.64%, #fae157 93.5%, #f9df56 100%);
+    
+        @include tablet-small {
+            width: 100%;
+        }
     }
     
     &__info {
