modified some styles in advert and header sections

--- a/styles.css
+++ b/styles.css
@@ -188,28 +188,25 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  margin: 46px 100px 56px; }
+  margin: 46rem 100rem 56rem; }
   @media (max-width: 1536px) {
     .header {
-      margin-inline: 60px; } }
+      margin-inline: 60rem; } }
   @media (max-width: 1200px) {
     .header {
-      margin-top: 30px;
-      margin-bottom: 40px;
-      gap: 10px; } }
+      margin-top: 30rem;
+      margin-bottom: 40rem;
+      gap: 10rem; } }
   @media (max-width: 992px) {
     .header {
       margin: 0;
-      padding: 30px;
+      padding: 30rem;
       position: fixed;
       top: 0;
       left: 0;
       right: 0;
       background: rgba(241, 217, 75, 0.6);
       z-index: 3; } }
-  @media (max-width: 576px) {
-    .header {
-      margin: 20px 10px; } }
   .header__logo {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -220,7 +217,7 @@ body {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    gap: 13px;
+    gap: 13rem;
     -ms-flex-negative: 0;
         flex-shrink: 0; }
     .header__logo:hover {
@@ -241,17 +238,17 @@ body {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    gap: 54px;
+    gap: 54rem;
     position: relative; }
     @media (max-width: 1536px) {
       .header__nav {
-        gap: 30px; } }
+        gap: 30rem; } }
     @media (max-width: 1200px) {
       .header__nav {
-        gap: 20px; } }
+        gap: 20rem; } }
     @media (max-width: 992px) {
       .header__nav {
-        gap: 50px; } }
+        gap: 50rem; } }
   .header__ul {
     display: -webkit-box;
     display: -ms-flexbox;
@@ -262,70 +259,74 @@ body {
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    gap: 65px; }
+    gap: 65rem; }
     @media (max-width: 1536px) {
       .header__ul {
-        gap: 30px; } }
+        gap: 30rem; } }
     @media (max-width: 1200px) {
       .header__ul {
-        gap: 20px; } }
+        gap: 20rem; } }
     @media (max-width: 992px) {
       .header__ul {
         -webkit-box-orient: vertical;
         -webkit-box-direction: normal;
             -ms-flex-direction: column;
                 flex-direction: column;
-        gap: 40px;
+        gap: 40rem;
         position: fixed;
-        height: 50%;
+        height: 100%;
+        width: 80%;
         left: 0;
         right: 0;
         top: 0;
         background: rgba(7, 7, 7, 0.9);
         z-index: 3;
-        -webkit-transform: translateY(-105%);
-                transform: translateY(-105%); } }
+        -webkit-transform: translateX(-105%);
+                transform: translateX(-105%); } }
     .header__ul.active {
-      -webkit-transform: translateY(0);
-              transform: translateY(0); }
+      -webkit-transform: translateX(0);
+              transform: translateX(0); }
   .header__li:hover {
     -webkit-transform: scale(1.09);
             transform: scale(1.09); }
   .header__a {
     font-family: var(--main-font);
     font-weight: 500;
-    font-size: 22px;
+    font-size: 22rem;
     letter-spacing: 0.01em;
     color: #242323; }
     .header__a:hover {
       color: var(--c-yellow-second); }
     @media (max-width: 1200px) {
       .header__a {
-        font-size: 18px;
+        font-size: 18rem;
         font-weight: 600; } }
     @media (max-width: 992px) {
       .header__a {
         color: var(--c-white);
-        font-size: 24px;
+        font-size: 24rem;
         font-weight: 400; } }
+    @media (max-width: 576px) {
+      .header__a {
+        font-size: 20rem; } }
   .header__burger {
     display: none;
-    width: 28px;
-    height: 28px;
+    width: 24rem;
+    height: 20rem;
     position: relative;
     cursor: pointer; }
     .header__burger span {
       display: block;
       position: absolute;
-      top: calc(50% - 1px);
+      top: calc(50% - 1rem);
       width: 100%;
-      height: 3px;
+      height: 3rem;
       background: var(--c-black); }
     .header__burger::before, .header__burger::after {
       content: "";
       position: absolute;
       width: 100%;
-      height: 3px;
+      height: 3rem;
       background: var(--c-black); }
     .header__burger::before {
       top: 0; }
@@ -337,12 +338,12 @@ body {
   .header__button {
     font-family: var(--main-font);
     font-weight: 500;
-    font-size: 24px;
+    font-size: 24rem;
     letter-spacing: -0.03em;
     color: #fefefe;
-    border-radius: 7px;
+    border-radius: 7rem;
     background: var(--c-black);
-    padding: 13px 22px 17px; }
+    padding: 13rem 22rem 17rem; }
     .header__button:hover {
       -webkit-transform: scale(1.05);
               transform: scale(1.05);
@@ -350,13 +351,13 @@ body {
       color: var(--c-black); }
     @media (max-width: 1200px) {
       .header__button {
-        font-size: 22px;
-        padding: 14px 18px; } }
+        font-size: 22rem;
+        padding: 14rem 18rem; } }
     @media (max-width: 576px) {
       .header__button {
-        font-size: 16px;
+        font-size: 16rem;
         font-weight: 400;
-        padding: 10px 15px; } }
+        padding: 10rem 15rem; } }
 
 .welcome {
   margin-bottom: 63px; }
@@ -875,7 +876,7 @@ body {
       .advert__info .white_rect {
         max-width: 280px;
         top: 6%;
-        left: 5%; } }
+        left: 15%; } }
     @media (max-width: 576px) {
       .advert__info .white_rect {
         max-width: 180px;
@@ -902,13 +903,17 @@ body {
         font-weight: 700; } }
     @media (max-width: 768px) {
       .advert__title {
-        font-size: 50px; } }
+        font-size: 50px;
+        margin-inline: auto; } }
     @media (max-width: 576px) {
       .advert__title {
         font-size: 34px;
         margin-bottom: 10px; } }
   .advert__desc {
     max-width: 666px; }
+    @media (max-width: 768px) {
+      .advert__desc {
+        margin-inline: auto; } }
     .advert__desc #advert__offer {
       font-weight: 500;
       font-size: 36px;
