--- a/scss/sections/advert.scss
+++ b/scss/sections/advert.scss
@@ -84,7 +84,7 @@
         @include tablet-small {
             max-width: 280px;
             top: 6%;
-            left: 5%;
+            left: 15%;
         }
         @include mobile {
             max-width: 180px;
@@ -115,6 +115,7 @@
         }
         @include tablet-small {
             font-size: 50px;
+            margin-inline: auto;
         }
         @include mobile {
             font-size: 34px;
@@ -124,6 +125,11 @@
 
     &__desc {
         max-width: 666px;
+
+        @include tablet-small {
+            margin-inline: auto;
+        }
+
         #advert__offer {
             font-weight: 500;
             font-size: 36px;
