--- a/scss/sections/header.scss
+++ b/scss/sections/header.scss
@@ -2,19 +2,19 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-    margin: 46px 100px 56px;
+    margin: 46rem 100rem 56rem;
 
     @include desktop {
-        margin-inline: 60px;
+        margin-inline: 60rem;
     }
     @include desktop-small {
-        margin-top: 30px;
-        margin-bottom: 40px;
-        gap: 10px;
+        margin-top: 30rem;
+        margin-bottom: 40rem;
+        gap: 10rem;
     }
     @include tablet {
         margin: 0;
-        padding: 30px;
+        padding: 30rem;
         position: fixed;
         top: 0;
         left: 0;
@@ -22,15 +22,12 @@
         background: rgba(241, 217, 75, 0.6);
         z-index: 3;
     }
-    @include mobile {
-        margin: 20px 10px;
-    }
 
     &__logo {
         display: flex;
         justify-content: center;
         align-items: center;
-        gap: 13px;
+        gap: 13rem;
         flex-shrink: 0;
         &:hover {
             transform: scale(1.08);
@@ -51,17 +48,17 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        gap: 54px;
+        gap: 54rem;
         position: relative;
         
         @include desktop {
-            gap: 30px;
+            gap: 30rem;
         }
         @include desktop-small {
-            gap: 20px;
+            gap: 20rem;
         }
         @include tablet {
-            gap: 50px;
+            gap: 50rem;
         }
     }
     
@@ -69,29 +66,30 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        gap: 65px;
+        gap: 65rem;
 
         @include desktop {
-            gap: 30px;
+            gap: 30rem;
         }
         @include desktop-small {
-            gap: 20px;
+            gap: 20rem;
         }
         @include tablet {
             flex-direction: column;
-            gap: 40px;
+            gap: 40rem;
             position: fixed;
-            height: 50%;
+            height: 100%;
+            width: 80%;
             left: 0;
             right: 0;
             top: 0;
             background: rgba(7, 7, 7, 0.9);
             z-index: 3;
-            transform: translateY(-105%);
+            transform: translateX(-105%);
         }
 
         &.active {
-            transform: translateY(0);
+            transform: translateX(0);
         }
     }
 
@@ -102,7 +100,7 @@
     &__a {
         font-family: var(--main-font);
         font-weight: 500;
-        font-size: 22px;
+        font-size: 22rem;
         letter-spacing: 0.01em;
         color: #242323;
         &:hover {
@@ -110,28 +108,31 @@
         }
 
         @include desktop-small {
-            font-size: 18px;
+            font-size: 18rem;
             font-weight: 600;
         }
         @include tablet {
             color: var(--c-white);
-            font-size: 24px;
+            font-size: 24rem;
             font-weight: 400;
+        }
+        @include mobile {
+            font-size: 20rem;
         }
     }
 
     &__burger {
         display: none;
-        width: 28px;
-        height: 28px;
+        width: 24rem;
+        height: 20rem;
         position: relative;
         cursor: pointer;
         span {
             display: block;
             position: absolute;
-            top: calc(50% - 1px);
+            top: calc(50% - 1rem);
             width: 100%;
-            height: 3px;
+            height: 3rem;
             background: var(--c-black);
         }
 
@@ -139,7 +140,7 @@
             content: "";
             position: absolute;
             width: 100%;
-            height: 3px;
+            height: 3rem;
             background: var(--c-black);
         }
         &::before {
@@ -157,12 +158,12 @@
     &__button {
         font-family: var(--main-font);
         font-weight: 500;
-        font-size: 24px;
+        font-size: 24rem;
         letter-spacing: -0.03em;
         color: #fefefe;
-        border-radius: 7px;
+        border-radius: 7rem;
         background: var(--c-black);
-        padding: 13px 22px 17px;
+        padding: 13rem 22rem 17rem;
 
         &:hover {
             transform: scale(1.05);
@@ -171,13 +172,13 @@
         }
 
         @include desktop-small {
-            font-size: 22px;
-            padding: 14px 18px;
+            font-size: 22rem;
+            padding: 14rem 18rem;
         }
         @include mobile {
-            font-size: 16px;
+            font-size: 16rem;
             font-weight: 400;
-            padding: 10px 15px;
+            padding: 10rem 15rem;
         }
     }
 }    
